--- a/.github/workflows/main3.yml
+++ b/.github/workflows/main3.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'adopt' 
+          distribution: 'alpine' 
 
       - name: Build with Gradle
         run: ./gradlew build
