--- a/.github/workflows/main4.yml
+++ b/.github/workflows/main4.yml
@@ -28,6 +28,9 @@ jobs:
           distribution: 'adopt'
           java-version: '17'
 
+      - name: grant permission for gradle
+        run: chomd +x gradlew 
+
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
