--- a/.github/workflows/main4.yml
+++ b/.github/workflows/main4.yml
@@ -53,5 +53,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/bookstore-application:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/BookAtoreApplication:latest
           file: Dockerfile
